--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,34 @@
 .main__container {
-   width: 90%
+   width: 90%;
+   display: flex;
+   flex-direction: column;
+}
+
+.main__logo {
+   width: 4rem;
+   align-self: center;
+   padding: 3rem 0;
+}
+
+.main__img {
+   width: 100%;
+   padding: 2rem;
+}
+
+.main__title {
+   font-weight: normal;
+   text-align: center;
+}
+
+.main__title span{
+   font-weight: bold;
+}
+
+.main__description {
+   text-align: center;
+   padding: 2rem 0;
+}
+
+.main__copyright {
+   text-align: center;
 }
