--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,3 +76,26 @@
       background-color: var(--blue);
       color: var(--white);
    }
+
+   @media (min-width: 40rem) {
+      .main__logo {
+         width: 5rem;
+      }
+      .main__title {
+         font-size: 2.5rem;
+      }
+      .main__description {
+         font-size: 1.2rem;
+         padding: 1rem 0 1rem 0;
+      }
+      .main__container {
+         max-width: 40%;
+      }
+      .main__img {
+         width: 100%;
+         padding: 2rem;
+         padding-bottom: 2rem;
+         padding-top: 2rem;
+      }
+      
+   }
